2009-12-06  Tadashi MATSUO  <matsuo@i.ci.ritsumei.ac.jp>

	* twittering-mode.el (twittering-use-wget): new variable for
	specifying whether the external command `wget' should be used.
	(twittering-retrieve-image): new function for retrieving icon
	images with/without wget.
	(twittering-get-twits): retrieve images with
	`twittering-retrieve-image'.

2009-12-04  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/test-twittering-mode.el (sign-string): add test

	* twittering-mode.el (twittering-current-hashtag): docstring
	(twittering-idle-time): removed (unused?)

2009-12-03  Tadasohi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-mode-map): define bindings so
	as to be also valid even on non-window terminal.

2009-12-02  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-icon-path): New funciton.
	(twittering-format-status): Use it.
	(twittering-get-twits): Ditto; wget now invoked for each icon.

2009-12-01  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-update-status-from-minibuffer):
	Add more strict length check for status.
	
	* twittering-mode.el (twittering-status-not-blank-p): New defun to
	separate a check code from twittering-update-status-if-not-blank.
	(twittering-update-status-from-minibuffer): Integrate a post code
	from twittering-update-status-if-not-blank.
	(twittering-update-status-if-not-blank): Remove.

2009-11-30  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-max-number-of-tweets-on-retrieval)
	(twittering-number-of-tweets-on-retrieval): add
	(twittering-http-get-list-index-sentinel): restore the variable
	'indexes' removed by mistake
	(twittering-get-twits): use 'twittering-number-of-tweets-on-retrieval'
	These changes were made by cvmat. thanks.

2009-11-29  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-status-to-status-datum): defined
	screen-name-in-text property
	(twittering-enter)
	(twittering-other-user-timeline-interactive)